--- a/templates/systemd-fact-frontend.service.j2
+++ b/templates/systemd-fact-frontend.service.j2
@@ -5,7 +5,7 @@ Requires=network.target
 
 [Service]
 Type=simple
-ExecStart={{ fact_root }}/src/start_fact_frontend.py
+ExecStart=/usr/bin/python3 {{ fact_root }}/src/start_fact_frontend.py
 WorkingDirectory={{ fact_root }}
 Restart=on-failure
 RestartSec=30
