Fedora: revert to mongodb 3.6

--- a/templates/yum-rhel8-mongodb.repo.j2
+++ b/templates/yum-rhel8-mongodb.repo.j2
@@ -1,7 +1,9 @@
 # https://fedoramagazine.org/how-to-get-mongodb-server-on-fedora/
-[mongodb-upstream]
-name=MongoDB Upstream Repository
-baseurl=https://repo.mongodb.org/yum/redhat/8Server/mongodb-org/4.2/x86_64/
+# https://docs.mongodb.com/v3.6/tutorial/install-mongodb-on-red-hat/
+[mongodb-org-3.6]
+name=MongoDB Repository
+#baseurl=https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org/3.6/x86_64/
+baseurl=https://repo.mongodb.org/yum/redhat/8Server/mongodb-org/3.6/x86_64/
 gpgcheck=1
 enabled=1
-gpgkey=https://www.mongodb.org/static/pgp/server-4.2.asc
+gpgkey=https://www.mongodb.org/static/pgp/server-3.6.asc
